--- a/client/src/components/settings-panel/microservice-panel/api-panel/api-panel.css
+++ b/client/src/components/settings-panel/microservice-panel/api-panel/api-panel.css
@@ -1,4 +1,4 @@
-.settings-panel {
+.api-panel {
     position: absolute;
     top: 20px;
     right: 20px;
@@ -24,7 +24,7 @@
     text-align: center;
 }
 
-.btn-close {
+.btn-back {
     position: absolute;
     border: none;
     background-color: #585b5e;
@@ -32,7 +32,7 @@
     right: 10px;
 }
 
-.btn-close:hover {
+.btn-back:hover {
     cursor: pointer;
 }
 
@@ -71,6 +71,20 @@
 }
 
 .btn-save:hover {
+    cursor: pointer;
+    background-color: #4b6077;
+}
+
+.btn-api {
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: #50a0ff;
+}
+
+.btn-api:hover {
     cursor: pointer;
     background-color: #4b6077;
 }
