--- a/client/src/components/settings-panel/microservice-panel/api-panel/api-panel.css
+++ b/client/src/components/settings-panel/microservice-panel/api-panel/api-panel.css
@@ -13,8 +13,9 @@
 .row {
     display: flex;
     flex-direction: row;
-    padding-top: 10px;
-    padding-left: 25px;
+    margin-top: 10px;
+    margin-left: 12px;
+    align-content: center;
 }
 
 .object-type {
@@ -27,38 +28,15 @@
 .btn-back {
     position: absolute;
     border: none;
-    background-color: #585b5e;
+    border-radius: 5px;
+    background-color: #50a0ff;
     top: 10px;
     right: 10px;
+    width: max-content;
 }
 
 .btn-back:hover {
     cursor: pointer;
-}
-
-.object-name {
-    border: none;
-    width: max-content;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-bottom: 10px;
-}
-
-.microservice-type {
-    margin: 0 10px 10px 10px;
-    border-radius: 5px;
-    padding: 0 15px 0 15px;
-}
-
-.cache {
-    margin: 0 10px 10px 10px;
-    position: relative;
-}
-
-.cache input {
-    position: absolute;
-    right: 10px;
-    top: 7px;
 }
 
 .btn-save {
@@ -72,7 +50,20 @@
 
 .btn-save:hover {
     cursor: pointer;
-    background-color: #4b6077;
+    background-color: #618cbb;
+}
+
+table, tr, td {
+    border: 1px solid black;
+    text-align: center;
+}
+
+table {
+    margin: 10px;
+}
+
+td {
+    padding: 5px;
 }
 
 .btn-api {
@@ -85,6 +76,25 @@
 }
 
 .btn-api:hover {
+    cursor: pointer;
+    background-color: #4b6077;
+}
+
+.btn-group {
+    position: center;
+    padding: 5px 150px;
+}
+
+.btn-element {
+    position: center;
+    margin-left: 10px;
+    margin-right: 10px;
+    background-color: #50a0ff;
+    border: none;
+    border-radius: 5px;
+}
+
+.btn-element:hover {
     cursor: pointer;
     background-color: #4b6077;
 }
