--- a/client/src/components/settings-panel/database-panel/database-panel.css
+++ b/client/src/components/settings-panel/database-panel/database-panel.css
@@ -1,49 +1,47 @@
 .database-panel {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-
-    border-radius: 15px;
-    background-color: #e0eaf1;
-
-    display: flex;
-    flex-direction: column;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  border-radius: 15px;
+  background-color: #e0eaf1;
+  display: flex;
+  flex-direction: column;
 }
 
 .row {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 .object-type {
-    border: 1px solid #585b5e;
-    border-radius: 5px;
-    width: max-content;
-    text-align: center;
+  border: 1px solid #585b5e;
+  border-radius: 5px;
+  width: max-content;
+  text-align: center;
 }
 
 .btn-close {
-    position: absolute;
-    border: none;
-    background-color: #585b5e;
-    top: 10px;
-    right: 10px;
+  position: absolute;
+  border: none;
+  background-color: #585b5e;
+  top: 10px;
+  right: 10px;
 }
 
 .btn-close:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .object-name {
-    border: none;
-    width: max-content;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-bottom: 10px;
+  border: none;
+  width: max-content;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
 }
 
 .database-type {
-    margin: 0 10px 10px 10px;
-    border-radius: 5px;
-    padding: 0 15px 0 15px;
+  margin: 0 10px 10px;
+  border-radius: 5px;
+  padding: 0 15px;
 }
