--- a/client/src/components/settings-panel/microservice-panel/api-panel/api-panel.css
+++ b/client/src/components/settings-panel/microservice-panel/api-panel/api-panel.css
@@ -1,101 +1,101 @@
 .api-panel {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-
-    border-radius: 15px;
-    background-color: #e0eaf1;
-
-    display: flex;
-    flex-direction: column;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  border-radius: 15px;
+  background-color: #e0eaf1;
+  display: flex;
+  flex-direction: column;
 }
 
 .row {
-    display: flex;
-    flex-direction: row;
-    margin-top: 10px;
-    margin-left: 12px;
-    align-content: center;
+  display: flex;
+  flex-direction: row;
+  margin-top: 10px;
+  margin-left: 12px;
+  align-content: center;
 }
 
 .object-type {
-    border: 1px solid #585b5e;
-    border-radius: 5px;
-    width: max-content;
-    text-align: center;
+  border: 1px solid #585b5e;
+  border-radius: 5px;
+  width: max-content;
+  text-align: center;
 }
 
 .btn-back {
-    position: absolute;
-    border: none;
-    border-radius: 5px;
-    background-color: #50a0ff;
-    top: 10px;
-    right: 10px;
-    width: max-content;
+  position: absolute;
+  border: none;
+  border-radius: 5px;
+  background-color: #50a0ff;
+  top: 10px;
+  right: 10px;
+  width: max-content;
 }
 
 .btn-back:hover {
-    cursor: pointer;
-    background-color: #618cbb;
+  cursor: pointer;
+  background-color: #618cbb;
 }
 
 .btn-save {
-    margin-bottom: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
-    border: none;
-    border-radius: 5px;
-    background-color: #94bbe6;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #94bbe6;
 }
 
 .btn-save:hover {
-    cursor: pointer;
-    background-color: #618cbb;
+  cursor: pointer;
+  background-color: #618cbb;
 }
 
-table, tr, td {
-    border: 1px solid black;
-    text-align: center;
+table,
+tr,
+td {
+  border: 1px solid black;
+  text-align: center;
 }
 
 table {
-    margin: 10px;
+  margin: 10px;
 }
 
 td {
-    padding: 5px;
+  padding: 5px;
 }
 
 .btn-api {
-    margin-bottom: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
-    border: none;
-    border-radius: 5px;
-    background-color: #50a0ff;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #50a0ff;
 }
 
 .btn-api:hover {
-    cursor: pointer;
-    background-color: #4b6077;
+  cursor: pointer;
+  background-color: #4b6077;
 }
 
 .btn-group {
-    position: center;
-    padding: 5px 150px;
+  position: center;
+  padding: 5px 150px;
 }
 
 .btn-element {
-    position: center;
-    margin-left: 10px;
-    margin-right: 10px;
-    background-color: #50a0ff;
-    border: none;
-    border-radius: 5px;
+  position: center;
+  margin-left: 10px;
+  margin-right: 10px;
+  background-color: #50a0ff;
+  border: none;
+  border-radius: 5px;
 }
 
 .btn-element:hover {
-    cursor: pointer;
-    background-color: #4b6077;
+  cursor: pointer;
+  background-color: #4b6077;
 }
