--- a/client/src/components/settings-panel/database-panel/add-table-panel/add-table-panel.css
+++ b/client/src/components/settings-panel/database-panel/add-table-panel/add-table-panel.css
@@ -6,26 +6,7 @@
   background-color: #e0eaf1;
   display: flex;
   flex-direction: column;
-}
-
-.row {
-  display: flex;
-  flex-direction: row;
-}
-
-.object-type {
-  border: 1px solid #585b5e;
-  border-radius: 5px;
-  width: max-content;
-  text-align: center;
-}
-
-.btn-close {
-  display: block;
-  border: none;
-  background-color: #585b5e;
-  top: 10px;
-  right: 10px;
+  width: 600px;
 }
 
 .btn-close:hover {
@@ -34,15 +15,9 @@
 
 .table-name {
   border: none;
-  width: 300px;
   text-align: center;
-  margin: 10px auto 5px;
-}
-
-.database-type {
-  margin: 0 10px 10px;
-  border-radius: 5px;
-  padding: 0 15px;
+  width: 300px;
+  margin: 10px auto;
 }
 
 .btn-save {
@@ -64,7 +39,7 @@ tr,
 td {
   border: 1px solid black;
   text-align: center;
-  width: 600px;
+  width: 500px;
 }
 
 table {
