--- a/client/src/components/settings-panel/microservice-panel/microservice-panel.css
+++ b/client/src/components/settings-panel/microservice-panel/microservice-panel.css
@@ -84,3 +84,17 @@
   cursor: pointer;
   background-color: #4b6077;
 }
+
+.btn-gateway {
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #50a0ff;
+}
+
+.btn-gateway:hover {
+  cursor: pointer;
+  background-color: #4b6077;
+}
