--- a/client/src/components/settings-panel/microservice-panel/microservice-panel.css
+++ b/client/src/components/settings-panel/microservice-panel/microservice-panel.css
@@ -1,7 +1,6 @@
 .microservice-panel {
   position: absolute;
-  top: 20px;
-  right: 20px;
+  margin: 15px;
   border-radius: 15px;
   background-color: #e0eaf1;
   display: flex;
