докер для одного микросервиса

--- a/client/src/components/settings-panel/microservice-panel/microservice-panel.css
+++ b/client/src/components/settings-panel/microservice-panel/microservice-panel.css
@@ -1,6 +1,7 @@
 .microservice-panel {
   position: absolute;
-  margin: 15px;
+  top: 20px;
+  right: 20px;
   border-radius: 15px;
   background-color: #e0eaf1;
   display: flex;
