--- a/client/src/components/render-flow/render-flow.css
+++ b/client/src/components/render-flow/render-flow.css
@@ -7,7 +7,8 @@
 .render-flow aside {
   position: absolute;
   border: 1px solid #eee;
-  margin: 15px;
+  margin-top: 20px;
+  margin-left: 15px;
   font-size: 12px;
   background: #fcfcfc;
   z-index: 1;
