--- a/client/src/components/settings-panel/database-panel/add-column-panel/add-column-panel.css
+++ b/client/src/components/settings-panel/database-panel/add-column-panel/add-column-panel.css
@@ -8,6 +8,17 @@
   flex-direction: column;
 }
 
+.checkbox-settings {
+  margin: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.checkbox-settings > input {
+  margin-top: 6px;
+}
+
 .btn-close {
   display: block;
   border: none;
@@ -24,6 +35,16 @@
   margin: 0 10px 10px;
   border-radius: 5px;
   padding: 0 15px;
+}
+
+.input-defaultvalue {
+  width: 260px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  border: none;
+  border-radius: 5px;
+  text-align: center;
 }
 
 .input-name {
@@ -45,4 +66,8 @@
 .btn-save:hover {
   cursor: pointer;
   background-color: #4b6077;
+}
+
+.btn-group {
+  margin-left: 20px;
 }
