--- a/client/src/components/settings-panel/database-panel/add-table-panel/add-table-panel.css
+++ b/client/src/components/settings-panel/database-panel/add-table-panel/add-table-panel.css
@@ -6,7 +6,7 @@
   background-color: #e0eaf1;
   display: flex;
   flex-direction: column;
-  width: 600px;
+  width: 400px;
 }
 
 .btn-close:hover {
@@ -16,7 +16,7 @@
 .table-name {
   border: none;
   text-align: center;
-  width: 300px;
+  width: 200px;
   margin: 10px auto;
 }
 
@@ -50,7 +50,16 @@ td {
   padding: 5px;
 }
 
+.addtablepanel-table {
+  width: 300px;
+}
+
 .column-row:hover {
   cursor: pointer;
   background-color: #618cbb;
+}
+
+.btn-group {
+  margin: auto;
+  padding: 5px;
 }
