--- a/client/src/components/render-flow/render-flow.css
+++ b/client/src/components/render-flow/render-flow.css
@@ -7,6 +7,7 @@
 .render-flow aside {
   position: absolute;
   border: 1px solid #eee;
+  border-radius: 10px;
   margin-top: 20px;
   margin-left: 15px;
   font-size: 12px;
