--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,12 +1,11 @@
 body {
-  font-family:
-    -apple-system,
+    font-family: -apple-system,
     BlinkMacSystemFont,
     "Segoe UI",
     "Fira Sans",
     "Droid Sans",
     "Helvetica Neue",
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
