--- a/client/src/components/settings-panel/database-panel/add-column-panel/add-column-panel.css
+++ b/client/src/components/settings-panel/database-panel/add-column-panel/add-column-panel.css
@@ -9,7 +9,10 @@
 }
 
 .checkbox-settings {
-    margin: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
