--- a/client/src/components/settings-panel/database-panel/add-table-panel/add-table-panel.css
+++ b/client/src/components/settings-panel/database-panel/add-table-panel/add-table-panel.css
@@ -63,3 +63,13 @@ td {
     margin: auto;
     padding: 5px;
 }
+
+.input-number {
+    margin: 10px 20px;
+}
+
+.input-number > input {
+    border: 1px solid;
+    border-radius: 5px;
+    margin-left: 5px;
+}
