--- a/client/src/components/render-flow/render-flow.css
+++ b/client/src/components/render-flow/render-flow.css
@@ -8,7 +8,7 @@
     position: absolute;
     border: 1px solid #eee;
     border-radius: 10px;
-    margin-top: 20px;
+    margin-top: 50px;
     margin-left: 15px;
     font-size: 12px;
     background: #fcfcfc;
@@ -28,4 +28,13 @@
 
 .render-flow::after {
     z-index: -1;
+}
+
+.input-project-name {
+    position: absolute;
+    margin: 10px;
+    border: 1px solid #4b6077;
+    border-radius: 5px;
+    width: max-content;
+    z-index: 1;
 }
